Whats happen in the ctor and assignments.

--- a/BooksManager/BooksManager.vcxproj
+++ b/BooksManager/BooksManager.vcxproj
@@ -148,11 +148,13 @@
     <ClInclude Include="loan.h" />
     <ClInclude Include="main.h" />
     <ClInclude Include="person.h" />
+    <ClInclude Include="print.h" />
+    <ClInclude Include="reservation.h" />
+    <ClInclude Include="sale.h" />
     <ClInclude Include="title.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="title.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
