--- a/BooksManager/BooksManager.vcxproj.filters
+++ b/BooksManager/BooksManager.vcxproj.filters
@@ -36,11 +36,17 @@
     <ClInclude Include="main.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="sale.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="reservation.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="print.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="title.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
     <ClCompile Include="main.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
