--- a/BooksManager/BooksManager.vcxproj
+++ b/BooksManager/BooksManager.vcxproj
@@ -143,12 +143,12 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="book.h" />
+    <ClInclude Include="customer.h" />
     <ClInclude Include="date.h" />
     <ClInclude Include="id.h" />
     <ClInclude Include="loan.h" />
     <ClInclude Include="main.h" />
     <ClInclude Include="person.h" />
-    <ClInclude Include="print.h" />
     <ClInclude Include="reservation.h" />
     <ClInclude Include="sale.h" />
     <ClInclude Include="title.h" />
