--- a/BooksManager/BooksManager.vcxproj
+++ b/BooksManager/BooksManager.vcxproj
@@ -143,7 +143,9 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="book.h" />
+    <ClInclude Include="clerk.h" />
     <ClInclude Include="customer.h" />
+    <ClInclude Include="data.h" />
     <ClInclude Include="date.h" />
     <ClInclude Include="db.h" />
     <ClInclude Include="id.h" />
@@ -151,15 +153,10 @@
     <ClInclude Include="main.h" />
     <ClInclude Include="person.h" />
     <ClInclude Include="print.h" />
-    <ClInclude Include="reservation.h" />
-    <ClInclude Include="sale.h" />
     <ClInclude Include="title.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <Text Include="booklist.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
