--- a/BooksManager/BooksManager.vcxproj.filters
+++ b/BooksManager/BooksManager.vcxproj.filters
@@ -54,6 +54,9 @@
     <ClInclude Include="test.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="crlf.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
